--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,21 @@
-spring.application.name=QRrepeater
+spring:
+  application:
+    name: QRrepeater
+  datasource:
+    url: jdbc:postgresql://localhost:5432/postgres
+    username: postgres
+    password: 4521JKMN
+    driver-class-name: org.postgresql.Driver
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: false
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        format_sql: true
+URL:
+  name:
+    qr: http://localhost:8080/generate/rep
+    notFound: http://localhost:8080/generate/notFound
+
